# solitaire-ml

./: .gitignore  README.md  dune-project  flake.nix  solitaire-ml.opam
lib/: cards.ml  cards.mli  color.ml  color.mli  dune  game.ml  game.mli  print.ml  print.mli  util.ml  util.mli
test/: dune
