(lang dune 3.21)

(name solitaire-ml)

(generate_opam_files true)

(source
 (github omega-800/solitaire-ml))

(authors "omega-800 <gshevoroshkin@proton.me>")

(maintainers "omega-800 <gshevoroshkin@proton.me>")

(license LICENSE)

(documentation https://github.com/omega-800/solitaire-ml/blob/main/README.md)

(package
 (name solitaire-ml)
 (synopsis "tui solitaire")
 (description "tui solitaire")
 (depends ocaml)
 (tags
  ("tui" "solitaire" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
